maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: not found: value get
	while(get(y) != 0){
              ^Escaper:12: error: not found: value &&
				case true && estFaceMur() => gauche(); gauche(); avance();
                                          ^