maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	while(true){nord()}
	
}
def nord(){
	while(get(y) != 0){
		if(getDirection == Direction.NORTH){
			estFaceMur() match{
				case false => avance()
				droite()
				case true && estFaceMur() => gauche(); gauche(); avance();
							 
				
				case _ =>
			}
		
		
		}else{
			gauche()
		}
	}
}

